# System-Integration

./: .gitignore
01_modules/html_module/: myModule.js
01_modules/html_no_module/: index.js
01_modules/node_commonjs/: package.json
01_modules/node_esmodules/: index.js  package.json
01_modules/python/: main.py
02_data_formats/: me.json  me.txt  me.xml  me.yaml
03_python_environments/pipenv/: Pipfile
03_python_environments/poetry/: pyproject.toml
04_basic_servers/node/: app.js
04_basic_servers/python/: main.py  pyproject.toml
05_date/node/: index.js
05_date/python/: main.py
06_server_to_server/node/: app.js
06_server_to_server/python/: main.py  pyproject.toml
07_dotenv/node/: index.js  package.json
07_dotenv/python/: main.py  pyproject.toml
08_Database_documentation/backup/: backup.sql
09_OpenAPI/java/openapi/: pom.xml
09_OpenAPI/java/openapi/src/main/java/com/example/openapi/: Book.java  BookConfig.java  BookController.java  BookRepository.java
09_OpenAPI/java/openapi/src/main/resources/: application.properties
09_OpenAPI/node/: app.js  package-lock.json  package.json
09_OpenAPI/node/routers/: usersRouter.js
09_OpenAPI/python/: main.py  pyproject.toml
09_OpenAPI/python/routers/: spacecraft_router.py
12_server-sent-events/node/: app.js
12_server-sent-events/node/public/: index.html
12_server-sent-events/python/: main.py  pyproject.toml
12_server-sent-events/python/templates/: index.html
13_github_webhooks/node/: app.js
13_github_webhooks/python/: main.py  pyproject.toml
14_azure_functions/HttpTrigger1/: __init__.py
15_websockets/node/: client.js  index.html  server.js
15_websockets/python/: pyproject.toml
16_CORS/: index.html
16_CORS/node/: app.js
16_CORS/python/: main.py  pyproject.toml
17_multipart-form/: index.html
17_multipart-form/node/: app.js  package-lock.json
17_multipart-form/python/: main.py  pyproject.toml
18_redis/node/: index.js
18_redis/python/basic_example/: main.py  pyproject.toml
18_redis/python/pubsub/: publisher.py  pyproject.toml  subscriber.py
18_redis/python/task_queues/: pyproject.toml  utils.py  worker.py
19_web_scraping/node/: index.js  package-lock.json  package.json
19_web_scraping/python/1._data_scraper/: data_scraper.py  pyproject.toml
19_web_scraping/python/2_web_crawler/: pyproject.toml
19_web_scraping/python/3_Scrapy_basic/: pyproject.toml
19_web_scraping/python/4_scrapy_wiki/: pyproject.toml
20_graphQL/node/: index.js  package.json  schema.graphql
20_graphQL/python/: app.py  crud.py  mutations.py  pyproject.toml
21_sqlite/node/: index.js  package.json
21_sqlite/node/database/: connection.js
21_sqlite/python/: database.db  main.py  pyproject.toml
Email integration/: api.txt
Email integration/node/: app.js
File Formats Bonanza/: me.csv  me.xml  parse_file.py  pyproject.toml
Marshalling/python/: main.py
WebhooksAssignment/Node/: app.js  package.json
WebhooksAssignment/Node/client/: app.js  package.json
WebhooksAssignment/Python/client/: main.py  pyproject.toml
WebhooksAssignment/Python/server/: main.py  pyproject.toml
mandatory_assignment_01/database_documentation/: KMTravelAgency_mro_docs.html
mandatory_assignment_02_part1/authServiceMandatoryII/: package-lock.json  package.json  server.js
mandatory_assignment_02_part2/: data_scraper.py  pyproject.toml
