[tool.poetry]
name = "testpoetry"
version = "0.1.0"
description = "test of poetry"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
emoji = "^2.2.0"

[tool.poetry.group.dev.dependencies]
emoji = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
