[tool.poetry]
name = "task-queues"
version = "0.1.0"
description = ""
authors = ["KennetTech <64315533+KennetTech@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "task_queues"}]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.5.4"
rq = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
