[tool.poetry]
name = "2-web-crawler"
version = "0.1.0"
description = ""
authors = ["KennetTech <64315533+KennetTech@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "2_web_crawler"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.30.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
