[tool.poetry]
name = "4-scrapy-wiki"
version = "0.1.0"
description = ""
authors = ["KennetTech <64315533+KennetTech@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "4_scrapy_wiki"}]

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
