[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["KennetTech <64315533+KennetTech@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.0"
fastapi = "^0.94.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
